<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/bg_screen_two">

    <!-- image on the screen -->
    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="114dp"
        android:layout_marginTop="@dimen/content_margin"
        android:src="@drawable/pluffytext"
        android:contentDescription="@string/pluffyCopyright"/>

    <!-- Title text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/content_margin"
        android:text="@string/howToStringAction"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:fontFamily="monospace"
        android:textSize="24sp"
        />

    <!-- Desc text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin"
        android:text="@string/howToString2"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:fontFamily="monospace"
        android:textSize="22sp"

        />

</LinearLayout>